--- a/renovation/src/views/components/services/services.pug
+++ b/renovation/src/views/components/services/services.pug
@@ -5,7 +5,7 @@
           br
           .content WE ARE A TEAM OF HIGHLY SKILLED PROFESSIONALS
 section.services_area
-    .container-fluid
+    .container
         .row.grid_services_area
             .col-lg-6.col-sm-6.col-12
                 .services_item
