--- a/renovation/src/views/components/testimonials/testimonials.scss
+++ b/renovation/src/views/components/testimonials/testimonials.scss
@@ -1,178 +1,163 @@
-
 .bgr_content_testimonial {
-  background-color: #f1f1f1;
-  
-
-  .banner {
-    background-image: url("https://f71lt0q191r215mt-zippykid.netdna-ssl.com/wp-content/uploads/2018/09/page-title.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    .container_banner {
-      padding: 0 30px;
-      .wrap-title {
-        padding-top: 120px;
-        padding-bottom: 105px;
-        display:block;
-
-        @include min-md {
-          padding-top: 150px;
-          padding-bottom: 135px;
-        }
-  
-        .title,
-        .content {
-          font-weight: 300;
-          text-transform: uppercase;
-          margin: 4px 0;
-          line-height: 1;
-        }
-        .title {
-          font-size: 40px;
-          color: #ffffff;
-
-          @include min-sm {
-            font-size: 70px;
-            margin: 8px 0;
-          }
-          @include min-md {
-            font-size: 90px;
-            margin: 10px 0;
-          }
-          
-        }
-        .content {
-          font-size: 16px;
-          color: rgba(255, 255, 255, 0.85);
-          font-weight: $fontweight-regular;
-
-          @include min-sm {
-            font-size: 20px;
-            margin: 8px 0;
-          }
-          @include min-md {
-            font-size: 22px;
-            margin: 10px 0;
-          }
-          
-        }
-      }
-    }
-  }
-  .container {
-    width: 94%;
-    margin: 0 auto;
-    padding-top: 60px;
-
-    .wrap_testimonials_item {
-      background-color: #fff;
-      box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.07);
-      margin: 50px 0;
-
-      .testimonials_item {
-        padding: 0 25px 20px 25px;
-        @include desktop {
-          padding: 0 35px 20px 35px;
-        }
-        .wrap_img_user {
-          display: flex;
-          justify-content: center;
-          width: 100%;
-          padding-bottom: 6px;
-
-          .img_user {
-            width: 67px;
-            margin-top: -30px;
-            img {
-              max-width: 100%;
-              border-radius: 50%;
+    background-color: #f1f1f1;
+    .banner {
+        background-image: url("https://f71lt0q191r215mt-zippykid.netdna-ssl.com/wp-content/uploads/2018/09/page-title.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        .container_banner {
+            padding: 0 30px;
+            .wrap-title {
+                padding-top: 120px;
+                padding-bottom: 105px;
+                display: block;
+                @include min-md {
+                    padding-top: 150px;
+                    padding-bottom: 135px;
+                }
+                .title,
+                .content {
+                    font-weight: 300;
+                    text-transform: uppercase;
+                    margin: 4px 0;
+                    line-height: 1;
+                }
+                .title {
+                    font-size: 40px;
+                    color: #ffffff;
+                    @include min-sm {
+                        font-size: 70px;
+                        margin: 8px 0;
+                    }
+                    @include min-md {
+                        font-size: 90px;
+                        margin: 10px 0;
+                    }
+                }
+                .content {
+                    font-size: 16px;
+                    color: rgba(255, 255, 255, 0.85);
+                    font-weight: $fontweight-regular;
+                    @include min-sm {
+                        font-size: 20px;
+                        margin: 8px 0;
+                    }
+                    @include min-md {
+                        font-size: 22px;
+                        margin: 10px 0;
+                    }
+                }
             }
-          }
         }
-        .wrap_description {
-          padding: 10px;
-
-          .user_name {
-            font-size: 25px;
-            font-weight: $fontweight-light;
-            color: hsl(0, 0%, 25%);
-            line-height: 25px;
-          }
-          .user_position {
-            color: hsla(0, 0%, 0%, 0.44);
-            padding: 10px;
-            font-size: 16px;
-            font-weight: $fontweight-light;
-          }
-          .conetent_testimonial {
-            padding: 30px 0;
-            p {
-              font-size: 15px;
-              line-height: 25.5px;
-              color: hsla(0, 0%, 0%, 0.5);
-              font-style: italic;
-            }
-          }
-        }
-      }
     }
-  }
+    .container {
+        width: 94%;
+        margin: 0 auto;
+        padding-top: 60px;
+        .wrap_testimonials_item {
+            background-color: #fff;
+            box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.07);
+            margin: 50px 0;
+            .testimonials_item {
+                padding: 0 25px 20px 25px;
+                @include desktop {
+                    padding: 0 35px 20px 35px;
+                }
+                .wrap_img_user {
+                    display: flex;
+                    justify-content: center;
+                    width: 100%;
+                    padding-bottom: 6px;
+                    .img_user {
+                        width: 67px;
+                        margin-top: -30px;
+                        img {
+                            max-width: 100%;
+                            border-radius: 50%;
+                        }
+                    }
+                }
+                .wrap_description {
+                    padding: 10px;
+                    .user_name {
+                        font-size: 25px;
+                        font-weight: $fontweight-light;
+                        color: hsl(0, 0%, 25%);
+                        line-height: 25px;
+                    }
+                    .user_position {
+                        color: hsla(0, 0%, 0%, 0.44);
+                        padding: 10px;
+                        font-size: 16px;
+                        font-weight: $fontweight-light;
+                    }
+                    .conetent_testimonial {
+                        padding: 30px 0;
+                        p {
+                            font-size: 15px;
+                            line-height: 25.5px;
+                            color: hsla(0, 0%, 0%, 0.5);
+                            font-style: italic;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
+
 .container {
-  width: 94%;
-  margin: 0 auto;
-  padding: 60px 0;
-
-  .wrap_testimonials_item {
-    background-color: #fff;
-    box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.07);
-    margin: 50px 0;
-
-    .testimonials_item {
-      padding: 0 25px 20px 25px;
-      @include desktop {
-        padding: 0 35px 20px 35px;
-      }
-      .wrap_img_user {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        padding-bottom: 6px;
-
-        .img_user {
-          width: 67px;
-          margin-top: -30px;
-          img {
-            max-width: 100%;
-            border-radius: 50%;
-          }
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 60px 0;
+    width: 100%;
+    .wrap_testimonials_item {
+        background-color: #fff;
+        box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.07);
+        margin: 50px 0;
+        .testimonials_item {
+            padding: 0 25px 20px 25px;
+            @include desktop {
+                padding: 0 35px 20px 35px;
+            }
+            .wrap_img_user {
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                padding-bottom: 6px;
+                .img_user {
+                    width: 67px;
+                    margin-top: -30px;
+                    img {
+                        max-width: 100%;
+                        border-radius: 50%;
+                    }
+                }
+            }
+            .wrap_description {
+                padding: 10px;
+                .user_name {
+                    font-size: 25px;
+                    font-weight: $fontweight-light;
+                    color: hsl(0, 0%, 25%);
+                    line-height: 25px;
+                }
+                .user_position {
+                    color: hsla(0, 0%, 0%, 0.44);
+                    padding: 10px;
+                    font-size: 16px;
+                    font-weight: $fontweight-light;
+                }
+                .conetent_testimonial {
+                    padding: 30px 0;
+                    p {
+                        font-size: 15px;
+                        line-height: 25.5px;
+                        color: hsla(0, 0%, 0%, 0.5);
+                        font-style: italic;
+                    }
+                }
+            }
         }
-      }
-      .wrap_description {
-        padding: 10px;
-
-        .user_name {
-          font-size: 25px;
-          font-weight: $fontweight-light;
-          color: hsl(0, 0%, 25%);
-          line-height: 25px;
-        }
-        .user_position {
-          color: hsla(0, 0%, 0%, 0.44);
-          padding: 10px;
-          font-size: 16px;
-          font-weight: $fontweight-light;
-        }
-        .conetent_testimonial {
-          padding: 30px 0;
-          p {
-            font-size: 15px;
-            line-height: 25.5px;
-            color: hsla(0, 0%, 0%, 0.5);
-            font-style: italic;
-          }
-        }
-      }
     }
-  }
 }
