--- a/renovation/src/views/components/home/home.scss
+++ b/renovation/src/views/components/home/home.scss
@@ -215,7 +215,7 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 15px;
+            padding: 75px 15px;
             width: 100%;
         }
     }
