--- a/Nhom4_Kempinki/src/assets/styles/base/_mixins.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_mixins.scss
@@ -16,6 +16,16 @@
         @content;
     }
 }
+@mixin max-md {
+    @media (max-width: #{breakpoints(md)}) {
+        @content;
+    }
+}
+@mixin max-xl {
+    @media (max-width: #{breakpoints(xl)}) {
+        @content;
+    }
+}
 
 @mixin min-sm {
     @media (min-width: #{breakpoints(sm)}) {
@@ -60,6 +70,11 @@
 }
 @mixin tabletplus {
     @media (min-width: #{breakpoints(md)}) and (max-width: #{breakpoints(lg)}) {
+        @content;
+    }
+}
+@mixin tabletdown {
+    @media (max-width: #{breakpoints(lg)}) {
         @content;
     }
 }
