--- a/Nhom4_Kempinki/src/views/components/homepage/explore/explore.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/explore/explore.pug
@@ -1,4 +1,4 @@
-.explore
+#our-hotel.explore
     .country.wow.fadeInUp
         h3(data-wow-duration="1s") EXPLORE OUR DESTINATIONS
         span Over 70 hotels
