--- a/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.pug
@@ -1,4 +1,4 @@
-.home-gallery
+#offers.home-gallery
     .section-title.text-center
         .container-fluid
             h2.block-title.wow.fadeInUp #KEMPINSKI GALLERY
