--- a/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
@@ -57,6 +57,8 @@ $colors: (
     c-blue: #0089ce,
     c-dark-blue: #003b59,
     c-dark-blue-navy: #00052e,
+    c-dark-blue-navy-1: #021b4b,
+    c-dark-blue-navy-2: #02215c,
     c-pink: #ff566b,
     c-black: #000000,
     c-yellow: #f8b62d,
@@ -75,6 +77,9 @@ $text-color-footer: color(text-color-footer);
 $bg-color: color(bg-color);
 $bg-color-primary: color(c-blue);
 $bg-color-primary-white: color(c-white);
+$bg-color-dark-blue-navy: color(c-dark-blue-navy);
+$bg-color-dark-blue-navy-1: color(c-dark-blue-navy-1);
+$bg-color-dark-blue-navy-2: color(c-dark-blue-navy-2);
 $bg-color-primary-pink: color(c-pink);
 $bg-color-black: color(c-black);
 $bg-color-white-blur: color(c-white-blur);
