--- a/Nhom4_Kempinki/src/views/components/header/header.pug
+++ b/Nhom4_Kempinki/src/views/components/header/header.pug
@@ -72,7 +72,7 @@ header
         .menu-left
             .menu-left-content.delay
                 span.menu-title Overview
-                - var menus = [{text: 'special offers', link: '/special-offers', submenu: [{text: 'sub-2-1', link: '###'}, {text: 'sub-2-2', link: '###'}] }, {text: '#Kempinski Gallery', link: '/guest-gallery'  }, {text: 'about us', link: '/about-us'}];
+                - var menus = [{text: 'special offers', link: '/special-offers', submenu: [{text: 'sub-2-1', link: '###'}, {text: 'sub-2-2', link: '###'}] }, {text: '#Kempinski Gallery', submenu: [{text: 'sub-2-1', link: '###'}, {text: 'sub-2-2', link: '###'}], link: '/guest-gallery'  }, {text: 'about us', link: '/about-us'}];
                 ul.side-menu
                     each list in menus
                         li.side-list-lv-1
@@ -83,6 +83,17 @@ header
                                         li.side-list-lv2
                                             a(href=listSub.link)= listSub.text
                 ul.navigation-only-phone
+                    li.multy-language
+                        .dropdown.open
+                            span.dropdown-toggle.icon-angle-down
+                                span.content English
+                            .dropdown-menu-block.center-xs
+                                include ../../mixins/list.pug
+                                +list('dropdown-menu', 'العربية', 'español', 'français', 'русский', '中文', 'Deutsch')
+                    li.login-wrapper
+                        a(title="Login", href="#") resgiter
+                    li.resgiter-wrapper
+                        a(title="Resgiter", href="#") Resgiter
                     
     .sticky-bar-mobile
         span.navigation-trigger
