--- a/Nhom4_Kempinki/src/views/components/header/header.scss
+++ b/Nhom4_Kempinki/src/views/components/header/header.scss
@@ -151,6 +151,7 @@ header {
                         }
                     }
                     .loginLink {
+                        cursor: pointer;
                         .login-link {
                             letter-spacing: 2.5px;
                             color: color(c-white);
@@ -181,6 +182,11 @@ header {
             opacity: 0;
             visibility: hidden;
             transition: 0.4s;
+            &.show-up{
+                transform: translateY(0);
+                opacity: 1;
+                visibility: visible;
+            }
             .link{
                 width: 100%;
                 display: flex;
@@ -391,17 +397,32 @@ header {
                 position: absolute;
                 top: 0;
                 left: 0;
+                width: 345px;
+                height: 100vh;
+                overflow: auto;
+                padding-bottom: 38px;
+            }
+            @include max-md{
+                width: 345px;
+                height: 100vh;
+                overflow: auto;
+                padding-bottom: 38px;
             }
             .menu-left-content.delay{
                 transform: translateX(-100%);
                 padding: 38px 0px;
-                animation: showDelay 0.5s forwards;
+                animation: showDelay 0.8s forwards;
                 -webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000); 
                 -moz-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000); 
                     -o-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000); 
                     animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
                 background: rgba(1,15,42,0.74);
                 @include tabletdown {
+                    background: rgb(1,15,42);
+                    transform: translateX(0);
+                    animation: none;
+                }
+                @include max-md {
                     background: rgb(1,15,42);
                     transform: translateX(0);
                     animation: none;
@@ -426,6 +447,14 @@ header {
                             padding: 0px 58px 0px 50px; 
                             color: color(c-white);
                             line-height: 2.35;
+                            @include tabletdown{
+                                padding-top: 5px;
+                                font-size: 14px;
+                            }
+                            @include max-md{
+                                padding-top: 5px;
+                                font-size: 14px;
+                            }
                         }
                         .sub-menu{
                             position: absolute;
@@ -438,6 +467,17 @@ header {
                             transition: 0.4s;
                             opacity: 0;
                             visibility: hidden;
+                            @include tabletdown{
+                                padding: 10px 20px;
+                                position: static;
+                                opacity: 1;
+                                visibility: visible;
+                            }
+                            @include max-md{
+                                position: static;
+                                opacity: 1;
+                                visibility: visible;
+                            }
                             li{
                                 &:hover{
                                     background: rgba(14,93,178,0.5);
@@ -450,6 +490,100 @@ header {
                         &:hover .sub-menu{
                             opacity: 1;
                             visibility: visible;
+                        }
+                        @include tabletdown{
+                            &>a{
+                                position: relative;
+                                &:after{
+                                    content:"\e904";
+                                    display: inline-block;
+                                    font-family: $icomoon-font-family;
+                                    font-weight: normal;
+                                    font-style: normal;
+                                    position: absolute;
+                                    right: 90px;
+                                    top: 6px;
+                                    font-size: 20px;
+                                }
+                            }
+                        }
+                        @include max-md{
+                            &>a{
+                                &:after{
+                                    content:"\e904";
+                                    display: inline-block;
+                                    font-family: $icomoon-font-family;
+                                    font-weight: normal;
+                                    font-style: normal;
+                                    position: absolute;
+                                    right: 90px;
+                                    top: 6px;
+                                    font-size: 20px;
+                                }
+                            }
+                        }
+                    }
+                }
+                .navigation-only-phone{
+                    display: none;
+                    @include tabletdown{
+                        display: block;
+                    }
+                    @include max-md{
+                        display: block;
+                    }
+                    li{
+                        margin-bottom: 1px;
+                        a{
+                            display: block;
+                            font-size: 11px;
+                            text-transform: uppercase;
+                            padding: 0px 58px 0px 50px; 
+                            color: color(c-white);
+                            line-height: 2.35;
+                            @include tabletdown{
+                                padding-top: 5px;
+                                font-size: 14px;
+                            }
+                            @include max-md{
+                                padding-top: 5px;
+                                font-size: 14px;
+                            }   
+                        }
+                        &:hover{
+                            background: rgba(14,93,178,0.5);
+                        }
+                        &:hover .sub-menu{
+                            opacity: 1;
+                            visibility: visible;
+                        }
+                        .dropdown-toggle{
+                            .content{
+                                display: block;
+                                font-size: 14px;
+                                text-transform: uppercase;
+                                padding: 0px 58px 0px 50px; 
+                                color: color(c-white);
+                                line-height: 2.35;
+                            }
+                        }
+                        .dropdown-menu-block{
+                            margin: 2px 0px;
+                            margin-left: 50px;
+                            width: 180px;
+                            background: color(c-white);
+                            border-radius: 4px;
+                            li{
+                                margin-bottom: 1px;
+                                a{
+                                    color: color(c-dark-blue-navy);
+                                    padding-top: 5px;
+                                    font-size: 14px;
+                                    line-height: 1.4;
+                                    font-size: 14px;
+                                }
+                            }
+                           
                         }
                     }
                 }
@@ -468,9 +602,11 @@ header {
             z-index: 99999;
         }
         .menu-left.is-active{
-           animation: leftToRight 0.4s forwards;
+            transition: 0.4s;
+            transform: translateX(0);
         }
         @keyframes leftToRight {
+           
             0% {transform: translateX(-100%)}
             100% {transform: translateX(0)}
         }
@@ -1060,64 +1196,131 @@ header {
                 }
             }
         }
-    }
-    .booking-block.show-up{
-        max-height: 300px;
-    }
-    .booking-block.fixed{
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 800;
-    }
-    .booking-block.active{
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 900;
-        min-height: 100vh;
-        overflow: auto !important;
-        background: color(c-white);
-        .show-sm-booking-block{
-            display: none;
+        &.show-up{
+            max-height: 300px;
         }
-        .select2-selection--single{
-            border: 1px solid #CCC !important;
+        &.booking-block.fixed{
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 800;
         }
-        .container{
-            display: block;
-            .title-block-booking{
-                display: flex;
-            }
-            .form-inline-search{
-                flex-direction: column;
-                margin-top: 20px;
-                padding: 0 15px;
-                .block-location{
-                    width: 100%;
+        @include tabletdown{
+            &.active{
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                z-index: 900;
+                min-height: 100vh;
+                overflow: auto !important;
+                background: color(c-white);
+                .show-sm-booking-block{
+                    display: none;
                 }
+                .select2-selection--single{
+                    border: 1px solid #CCC !important;
+                }
+                .container{
+                    display: block;
+                    .title-block-booking{
+                        display: flex;
+                    }
+                    .form-inline-search{
+                        flex-direction: column;
+                        margin-top: 20px;
+                        padding: 0 15px;
+                        .block-location{
+                            width: 100%;
+                        }
+                    }
+                }   
             }
-        }   
+        }
+        @include max-md{
+            &.active{
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                z-index: 900;
+                min-height: 100vh;
+                overflow: auto !important;
+                background: color(c-white);
+                .show-sm-booking-block{
+                    display: none;
+                }
+                .select2-selection--single{
+                    border: 1px solid #CCC !important;
+                }
+                .container{
+                    display: block;
+                    .title-block-booking{
+                        display: flex;
+                    }
+                    .form-inline-search{
+                        flex-direction: column;
+                        margin-top: 20px;
+                        padding: 0 15px;
+                        .block-location{
+                            width: 100%;
+                        }
+                    }
+                }   
+            }
+        }
+       
     }
 }
-.customs{
-    .select2-search--dropdown{
-        // display: none;
-    }
-    .select2-results{
-        .select2-results__option{
-            color: color(c-dark-blue-navy);
-            font-size: 14px;
-            text-transform: uppercase;
-            padding: 3px 20px;
-            white-space: nowrap;
-            font-family: $font-helvelticaRegular;
-            &.select2-results__option--highlighted{
-                background: #f5f5f5;
-                &[aria-selected="true"]{
+.my-container{
+    .select2-dropdown--below{
+        border: 1px solid rgba(0,0,0,0.15);
+        border-radius: 4px;
+        box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+        .select2-results{
+            .select2-results__option{
+                color: color(c-dark-blue-navy);
+                font-size: 14px;
+                text-transform: uppercase;
+                padding: 3px 20px;
+                white-space: nowrap;
+                font-family: $font-helvelticaRegular;
+                &.select2-results__option--highlighted{
                     background: #f5f5f5;
+                    &[aria-selected="true"]{
+                        background: #f5f5f5;
+                    }
+                }
+            }
+        }
+    }
+}
+.my-container-hotel{
+    .select2-dropdown--below{
+        border: 1px solid rgba(0,0,0,0.15);
+        border-radius: 4px;
+        box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+        .select2-results{
+            .select2-results__option{
+                color: color(c-dark-blue-navy);
+                font-size: 13px;
+                line-height: 18px;
+                text-transform: uppercase;
+                &.select2-results__option--highlighted{
+                    background: #5897fb;
+                    color: color(c-white);
+                    &[aria-selected="true"]{
+                        background: #5897fb;
+                    }
+                }
+                &[role="treeitem"]{
+                    text-transform: capitalize;
+                }
+                .select2-results__group{
+                    font-size: 13px;
+                    text-transform: capitalize;
+                    font-family: $font-helvelticaBold;
                 }
             }
         }
