--- a/adaptis-master/src/views/layouts/master.pug
+++ b/adaptis-master/src/views/layouts/master.pug
@@ -58,7 +58,7 @@ html(lang='jp')
 
     //- block scripts
     block scripts
-    script(src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js")
+    //- script(src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js")
 
     script(id="ze-snippet", src="https://static.zdassets.com/ekr/snippet.js?key=a0d065e1-295a-4de9-89f4-106bb253506a" defer)
     script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo8ICXyf-BwI1tBv-PJxvHgm-0wUbTLAY&libraries=places" defer)
