--- a/renovation/src/views/components/header/header.pug
+++ b/renovation/src/views/components/header/header.pug
@@ -70,11 +70,11 @@ header
                                 span.icon_checkout checkout
                     //-->
                 li.menu_lv1
-                    a.link_menu_lv1(href="#") services
+                    a.link_menu_lv1(href="services") services
                 li.menu_lv1
-                    a.link_menu_lv1(href="#") portfolio
+                    a.link_menu_lv1(href="portfolio") portfolio
                 li.menu_lv1
-                    a.link_menu_lv1(href="#") testimonials
+                    a.link_menu_lv1(href="testimonials") testimonials
                 li.menu_lv1
                     a.link_menu_lv1(href="#") latestnews
                 li.menu_lv1
