--- a/Nhom4_Kempinki/src/views/components/gallerypage/olapic-wall/olapic-wall.pug
+++ b/Nhom4_Kempinki/src/views/components/gallerypage/olapic-wall/olapic-wall.pug
@@ -7,18 +7,18 @@
                 .viewall
                     a View All
                 ul.olapic-desktop
-                    li.active.active1
-                        a(data-filter=".viewall") View All
-                    li
-                        a(data-filter=".africa") Africa
-                    li
-                        a(data-filter=".americas") Americas
-                    li
-                        a(data-filter=".asia") Asia
-                    li
-                        a(data-filter=".europe") Europe
-                    li
-                        a(data-filter=".middle") Middle East
+                    li.active.active1(data-filter=".viewall")
+                        a View All
+                    li(data-filter=".africa")
+                        a Africa
+                    li(data-filter=".americas")
+                        a Americas
+                    li(data-filter=".asia")
+                        a Asia
+                    li(data-filter=".europe")
+                        a Europe
+                    li(data-filter=".middle")
+                        a Middle East
     .olapic-main
         .container
             .image-gallery
