--- a/Nhom4_Kempinki/src/assets/styles/base/_mixins.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_mixins.scss
@@ -44,6 +44,11 @@
         @content;
     }
 }
+@mixin max-xs {
+    @media screen and (max-width: #{breakpoints(xs)}) {
+        @content;
+    }
+}
 
 @mixin min-xxs {
     @media screen and (max-width: #{breakpoints(xxs)}) {
