--- a/Nhom4_Kempinki/src/views/components/header/header.scss
+++ b/Nhom4_Kempinki/src/views/components/header/header.scss
@@ -19,16 +19,22 @@ header {
             height: 100%;
             .top-logo {
                 @include flexbox();
+                justify-content: flex-start;
+                @include max-md{
+                    justify-content: center;
+                }
                 .logo {
                     a {
                         display: block;
                         img {
-                            width: 35%;
-                            @include tabletdown {
+                            width: 40%;
+                            @include tabletplus {
                                 width: 75%;
                             }
                             @include max-md {
                                 width: 20%;
+                                display: block;
+                                margin: 0 auto;
                             }
                         }
                     }
@@ -158,7 +164,7 @@ header {
                             .icon-user{
                                 margin-right: 8px;
                                 font-size: 12px;
-                                color: color(c-brown-light);
+                                color: color(c-brown);
                             }
                             .text-login{
                                font-size: 11px;
@@ -373,6 +379,14 @@ header {
             top: 0;
             left: 0px;
             height: 100%;
+            @include tabletplus{
+                display: none;
+            }
+            @include max-md{
+                display: block;
+                position: relative;
+                padding-top: 56.75%;
+            }
             .banner-wrapper-content{
                 height: 100%;
                 @include flexbox();
@@ -380,6 +394,11 @@ header {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                }
+                @include max-md{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
                 }
             }
         }
@@ -407,6 +426,15 @@ header {
                 height: 100vh;
                 overflow: auto;
                 padding-bottom: 38px;
+                &.big-width{
+                    width: 410px;
+                }
+            }
+            @include max-xs{
+                width: 100%;
+                &.big-width{
+                    width: 100%;
+                }
             }
             .menu-left-content.delay{
                 transform: translateX(-100%);
@@ -440,6 +468,10 @@ header {
                 .side-menu{
                     .side-list-lv-1{
                         margin-bottom: 1px;
+                        display: block;
+                        @include tabletdown{
+                            position: relative;
+                        }
                         a{
                             display: block;
                             font-size: 11px;
@@ -447,13 +479,23 @@ header {
                             padding: 0px 58px 0px 50px; 
                             color: color(c-white);
                             line-height: 2.35;
+                            
                             @include tabletdown{
                                 padding-top: 5px;
                                 font-size: 14px;
                             }
-                            @include max-md{
-                                padding-top: 5px;
-                                font-size: 14px;
+                        }
+                        span.icon-angle-down{
+                            position: absolute;
+                            top: 10px;
+                            right: 30px;
+                            color: color(c-white);
+                            font-size: 20px;
+                            z-index: 99;
+                            display: none;
+                            cursor: pointer;
+                            @include tabletdown{
+                                display: block;
                             }
                         }
                         .sub-menu{
@@ -472,11 +514,10 @@ header {
                                 position: static;
                                 opacity: 1;
                                 visibility: visible;
+                                display: none;
                             }
-                            @include max-md{
-                                position: static;
-                                opacity: 1;
-                                visibility: visible;
+                            &.d-block{
+                                display: block;
                             }
                             li{
                                 &:hover{
@@ -486,50 +527,23 @@ header {
                         }
                         &:hover{
                             background: rgba(14,93,178,0.5);
+                            @include tabletdown{
+                                background: none;
+                            }
                         }
                         &:hover .sub-menu{
                             opacity: 1;
                             visibility: visible;
                         }
                         @include tabletdown{
-                            &>a{
-                                position: relative;
-                                &:after{
-                                    content:"\e904";
-                                    display: inline-block;
-                                    font-family: $icomoon-font-family;
-                                    font-weight: normal;
-                                    font-style: normal;
-                                    position: absolute;
-                                    right: 90px;
-                                    top: 6px;
-                                    font-size: 20px;
-                                }
-                            }
+                           
                         }
-                        @include max-md{
-                            &>a{
-                                &:after{
-                                    content:"\e904";
-                                    display: inline-block;
-                                    font-family: $icomoon-font-family;
-                                    font-weight: normal;
-                                    font-style: normal;
-                                    position: absolute;
-                                    right: 90px;
-                                    top: 6px;
-                                    font-size: 20px;
-                                }
-                            }
-                        }
+                       
                     }
                 }
                 .navigation-only-phone{
                     display: none;
                     @include tabletdown{
-                        display: block;
-                    }
-                    @include max-md{
                         display: block;
                     }
                     li{
@@ -552,6 +566,9 @@ header {
                         }
                         &:hover{
                             background: rgba(14,93,178,0.5);
+                            @include tabletdown{
+                                background: none;
+                            }
                         }
                         &:hover .sub-menu{
                             opacity: 1;
@@ -559,12 +576,16 @@ header {
                         }
                         .dropdown-toggle{
                             .content{
-                                display: block;
+                                display: inline-block;
                                 font-size: 14px;
                                 text-transform: uppercase;
-                                padding: 0px 58px 0px 50px; 
+                                padding: 0px 0px 0px 50px; 
                                 color: color(c-white);
                                 line-height: 2.35;
+                            }
+                            .icon-angle-down{
+                                color: color(c-white);
+                                margin-left: 5px;
                             }
                         }
                         .dropdown-menu-block{
@@ -573,6 +594,7 @@ header {
                             width: 180px;
                             background: color(c-white);
                             border-radius: 4px;
+                            display: none;
                             li{
                                 margin-bottom: 1px;
                                 a{
@@ -583,7 +605,9 @@ header {
                                     font-size: 14px;
                                 }
                             }
-                           
+                            &.d-block{
+                                display: block;
+                            }
                         }
                     }
                 }
@@ -683,6 +707,7 @@ header {
             @include max-xl{
                 width: 1100px;
                 max-width: 100%;
+                padding-bottom: 20px;
             }
             @include tabletdown {
                 display: none;
@@ -835,7 +860,7 @@ header {
                             @include tabletdown {
                                height: 38px;
                                border: 1px solid #ccc;
-                               padding-left: 0;
+                               padding-left: 10;
                             }
                         }
                         span{
@@ -1056,6 +1081,11 @@ header {
                                 margin-top: 15px;
                                 margin-bottom: 10px;
                                 position: relative;
+                                @include tabletdown{
+                                    color: color(c-dark-blue-navy);
+                                    margin-top: 20px;
+                                    text-align: left;
+                                }
                                 &:after{
                                     content: "";
                                     position: absolute;
@@ -1065,6 +1095,9 @@ header {
                                     width: 100%;
                                     height: 1px;
                                     background: #2a2825;
+                                    @include tabletdown{
+                                        display: none;
+                                    }
                                 }
                                 &.d-block{
                                     display: block;
@@ -1076,12 +1109,26 @@ header {
                                 padding-top: 10px;
                                 justify-content: center;
                                 position: relative;
+                                @include tabletdown{
+                                    flex-direction: column;
+                                }
                                 .form-group.children-select{
                                     position: relative;
                                     margin: 0 2px;
+                                    @include tabletdown{
+                                        margin-bottom: 20px;
+                                    }
                                     .select2-container{
+                                        @include tabletdown{
+                                            min-width: 25%;
+                                        }
                                         .select2-selection__rendered{
                                             padding: 0 10px;
+                                        }
+                                        .select2-selection__arrow{
+                                            @include tabletdown{
+                                                height: 38px;
+                                            }
                                         }
 
                                     }
@@ -1098,23 +1145,46 @@ header {
                 visibility: hidden;
                 @include tabletdown{
                     margin-top: 0px;
+                    padding: 0 15px;
+                }
+                .title{
+                    display: none;
+                    @include tabletdown{
+                        display: block;
+                        font-family: $font-helvelticaBold;
+                        font-size: 13px;
+                        margin-top: 20px;
+                        text-transform: uppercase;
+                        margin-bottom: 0px;
+                    }
                 }
                 .row{
                     justify-content: center;
                     margin: 0px;
+                    @include tabletdown{
+                        flex-direction: column;
+                    }
                 .type-code-block{
                     width: 165px;
                     margin: 0 2.5px;
+                    @include tabletdown{
+                        width: 100%;
+                        margin: 0px;
+                        margin-top: 10px;
+                    }
                     .select2-container{
                         width: 100% !important;
+                        @include tabletdown{
+                            min-width: 100%;
+                        }
                         .select2-selection--single{
-                            height: 30px;
+                            height: 38px;
                             border: none;
                             border-radius: 2px;
                             .select2-selection__rendered{
                                 font-family: $font-helvelticaRegular;
                                 padding: 0px 10px;
-                                line-height: 30px;
+                                line-height: 38px;
                                 text-transform: uppercase;
                                 font-size: 13px;
                             }
@@ -1136,6 +1206,11 @@ header {
                 .block{
                     width: 165px;
                     margin: 0 2.5px;
+                    @include tabletdown{
+                        width: 100%;
+                        margin: 0;
+                        margin-top: 8px;
+                    }
                     input{
                         background: color(c-white);
                         border: 0;
@@ -1144,10 +1219,13 @@ header {
                         color: color(c-dark-blue-navy);
                         line-height: 1.308;
                         text-align: left;
-                        height: 30px;
+                        height: 38px;
                         line-height: 30px;
                         padding: 0 12px;
                         width: 100%;
+                        @include tabletdown{
+                            border: 1px solid #ccc;
+                        }
                     }
                 }
                 .partner-info-modal-trigger{
@@ -1155,7 +1233,26 @@ header {
                     margin-left: 10px;
                     font-size: 12px;
                     text-transform: uppercase;
+                    @include tabletdown{
+                        display: none;
+                    }
                 }
+                }
+                button{
+                    display: none;
+                    @include tabletdown{
+                        width: 100%;
+                        color: color(c-white);
+                        padding: 9px 12px 7px 12px;
+                        line-height: 1;
+                        display: block;
+                        background: color(c-brown);
+                        font-size: 21px;
+                        text-transform: uppercase;
+                        letter-spacing: 4px;
+                        border: 0;
+                        margin-top: 20px;;
+                    }
                 }
             }
             .block-option.show-up{
