update the agency

--- a/adaptis-master/src/assets/styles/_app.scss
+++ b/adaptis-master/src/assets/styles/_app.scss
@@ -27,3 +27,6 @@
 @import '../../views/components/slider/slider';
 @import '../../views/components/the_work_my/the_work_my';
 @import '../../views/components/thework/thework.scss';
+@import '../../views/components/agency/agency';
+@import '../../views/components/contact/contact';
+@import '../../views/components/highlight/highlight';
