--- a/adaptis-master/src/assets/styles/base/_flexboxgrid.scss
+++ b/adaptis-master/src/assets/styles/base/_flexboxgrid.scss
@@ -22,8 +22,8 @@
     flex-direction: row;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-right: -1.5rem;
-    margin-left: -1.5rem;
+    // margin-right: -1.5rem;
+    // margin-left: -1.5rem;
 }
 
 .row.reverse {
