--- a/adaptis-master/src/views/pages/the_agency.pug
+++ b/adaptis-master/src/views/pages/the_agency.pug
@@ -5,3 +5,7 @@ block title
 
 block content
     .theAgencyPage
+    include ../components/agency/agency.pug
+    include ../components/clients/clients.pug
+    include ../components/highlight/highlight.pug
+    include ../components/relative_block/relative_block.pug
