--- a/renovation/src/views/components/footer/footer.pug
+++ b/renovation/src/views/components/footer/footer.pug
@@ -41,4 +41,6 @@ footer
                                     a(href="#")
                                 li.social_icon_pinterest
                                     a(href="#")
+    .underFooter
+        p © 2019 All Rights Reserved. Developed by ProgressionStudios
     <a href="#" id="back_to_top"></a>
