--- a/adaptis-master/src/views/pages/contact.pug
+++ b/adaptis-master/src/views/pages/contact.pug
@@ -6,3 +6,4 @@ block title
 block content
     .theContactPage
     include ../components/contact/contact.pug
+    include ../components/relative_block/relative_block.pug
