--- a/adaptis-master/src/views/components/contact/contact.scss
+++ b/adaptis-master/src/views/components/contact/contact.scss
@@ -1,24 +1,27 @@
+body{
+    background-color: white;
+}
 .part1_contact{
     margin: 0 auto;
     width: 85%;
-    padding-top: 50px;
+    padding-top: 160px;
     .title_contact{
         span{
             display: block;
             color: #6E6E6E;
-            font-size: 20px;
-            margin-bottom: 20px;
+            font-size: 25.2px;
+            margin-bottom: 2px;
         }
         .larger{
-            font-size: 45px;
+            font-size: 42px;
             color: black;
         }
     }
     .content_contact{
         width: 63%;
-        margin-top: 60px;
+        margin-top: 40px;
         p{
-            font-size: 20px;
+            font-size: 16px;
             color: black;
         }
     }
