--- a/Nhom4_Kempinki/src/views/components/aboutus/aboutus/aboutus.pug
+++ b/Nhom4_Kempinki/src/views/components/aboutus/aboutus/aboutus.pug
@@ -1,3 +1,11 @@
+.showus
+    .showus-top
+        .container
+            ul
+                li.clock
+                li.home
+                    a(href="#") HOME
+                li.show ABOUT US
 .page-about
   .section-title.text-center
     .container-fluid
