--- a/Nhom4_Kempinki/src/views/components/gallerypage/showus/showus.pug
+++ b/Nhom4_Kempinki/src/views/components/gallerypage/showus/showus.pug
@@ -7,8 +7,9 @@
                     a(href="#") HOME
                 li.show SHOW US YOUR @KEMPINSKI
     .showus-main
-        .container  
+        .container.wow.fadeInUp  
             h1 SHOW US YOUR @KEMPINSKI
             .sub-title
+                span.line
                 span Our guests always travel the world in style. Mention @Kempinski on Instagram for a chance to be featured!
             p Guest Gallery
