--- a/Nhom4_Kempinki/src/views/components/gallerypage/showus/showus.scss
+++ b/Nhom4_Kempinki/src/views/components/gallerypage/showus/showus.scss
@@ -32,6 +32,7 @@
     background-color: #f5f5f5;
     border-bottom: 1px solid #ecedeb;
     ul {
+      margin-left: 30px;
       display: flex;
       font-size: 10px;
       @include mobile{
@@ -78,13 +79,24 @@
       padding-top: 30px;
     }
     .sub-title {
+      position: relative;
     //   min-width: 413px;
+      .line{
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        height: 1px;
+        background: #b5a191;
+        left: 0;
+      }
       span {
         font-family: $font-kingscalson;
         font-size: 18px;
         position: relative;
         color: #010f2a;
         white-space: initial;
+        background: #f8f8f6;
+        padding: 0 10px;
         // &::before {
         //   left: -160px;
         //   @include before_after;
