--- a/Nhom4_Kempinki/src/views/components/homepage/explore/explore.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/explore/explore.pug
@@ -115,7 +115,7 @@
                         .hotel_info_padding
                             h4 Vienna
                             p Heritage-listed five-star-superior Palais Hansen Kempinski is located at Schottenring, right at the famous Ring Boulevard. Originally built as a hotel for the World Exhibition in 1873, this building captivates with contemporary design, modern architecture and luxury. Palais Hansen Kempinski provides 152 
-                            p Guests can choose from a range of luxury rooms and suites to suit their requirements and the hotel also provides four gourmet restaurants and three bars with incredible views of the city. There is an onsite health club which includes a spa, swimming pool and gym, and the city’s visitor attractions and shopping malls are also easily accessible from the hotel.
+                            p Guests can choose from a range of luxury rooms and suites to suit their requirements and the hotel also provides four gourmet restaurants and three bars with incredible views of the city. There is an onsite health club which includes a spa, swimming pool and gym, and the city’s visitor attractions and shopping malls are also easily.
                             p Take a look around our site to find out more about our hotel, through our
                             a(href="#") FURTHER INFORMATION
         .hotel_des
