--- a/Nhom4_Kempinki/src/views/components/header/header.scss
+++ b/Nhom4_Kempinki/src/views/components/header/header.scss
@@ -1178,17 +1178,26 @@ header {
                             min-width: 100%;
                         }
                         .select2-selection--single{
-                            height: 38px;
+                            height: 30px;
                             border: none;
                             border-radius: 2px;
+                            @include tabletdown{
+                                height: 38px;
+                            }
                             .select2-selection__rendered{
                                 font-family: $font-helvelticaRegular;
                                 padding: 0px 10px;
-                                line-height: 38px;
+                                line-height: 30px;
                                 text-transform: uppercase;
                                 font-size: 13px;
+                                @include tabletdown{
+                                    line-height: 38px;
+                                }
                             }
                             .select2-selection__arrow{
+                                @include tabletdown{
+                                    height: 38px;
+                                }
                                 b{
                                     border-color: #000000 transparent transparent transparent;
                                 }
@@ -1219,12 +1228,12 @@ header {
                         color: color(c-dark-blue-navy);
                         line-height: 1.308;
                         text-align: left;
-                        height: 38px;
                         line-height: 30px;
                         padding: 0 12px;
                         width: 100%;
                         @include tabletdown{
                             border: 1px solid #ccc;
+                            height: 38px;
                         }
                     }
                 }
