update code the work vrs2

--- a/adaptis-master/src/assets/styles/base/_mixins.scss
+++ b/adaptis-master/src/assets/styles/base/_mixins.scss
@@ -215,3 +215,10 @@
 	-o-transition: $value;
 	-ms-transition: $value;
 }
+@mixin transform($value) {
+	transform: $value;
+	-moz-transform: $value;
+	-webkit-transform: $value;
+	-o-transform: $value;
+	-ms-transform: $value;
+}
