--- a/adaptis-master/src/assets/styles/base/_variables.scss
+++ b/adaptis-master/src/assets/styles/base/_variables.scss
@@ -2,11 +2,13 @@
 $grid-breakpoints: (
     xxs: 360px,
     xs: 481px,
+    smminus:767px,
     sm: 768px,
     smplus: 769px,
     mdminus: 991px,
     md: 992px,
     lg: 1025px,
+    xlminus: 1199px,
     xl: 1200px
 ); 
 
