--- a/adaptis-master/src/views/layouts/master.pug
+++ b/adaptis-master/src/views/layouts/master.pug
@@ -40,8 +40,8 @@ html(lang='jp')
     //- Fonts
     //- link(href="https://fonts.googleapis.com/css?family=Quicksand", rel='stylesheet')
 
-    link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
-    link(href='../../../asset/style/fonts/FonteAwesome/font-awesome.min.css')
+    //-link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+    //-link(href='../../../asset/style/fonts/FonteAwesome/font-awesome.min.css')
     
 
     //- Title
